@@ -10,7 +10,6 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -43,12 +42,11 @@ public class TermService {
         List<Term> terms = termRepository.findAllByRoomId(roomId);
 
         return terms.stream()
-                .map((term) -> new TermDto(
-                        term.getId(),
+                .map(term -> new TermDto(
                         term.getDay(),
                         term.getStartTime(),
                         term.getEndTime()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
